Window is now resizable

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(moebius PRIVATE
+    vko.cpp
     init.cpp
     io.cpp
     draw.cpp
+    window.cpp
 )
 
 target_include_directories(moebius PRIVATE
