Created Uniform buffers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(moebius PRIVATE
     draw.cpp
     window.cpp
     vertex.cpp
+    descriptor.cpp
 )
 
 target_include_directories(moebius PRIVATE
